<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calculator.CalculatorFragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_heart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/heart" />

    <TextView
        android:id="@+id/tv_love_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/love_calculator"
        android:textColor="@color/blue"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/first_name"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_firs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/et_bg"
        android:hint="@string/you"
        android:padding="12dp" />

    <TextView
        android:id="@+id/tv_second_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/second_name"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/et_bg"
        android:hint="@string/me"
        android:padding="12dp" />

    <Button
        android:id="@+id/btn_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/blue"
        android:text="@string/calculate"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:cornerRadius="20dp" />

    <Button
        android:id="@+id/btn_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/histor"
        app:cornerRadius="20dp"
        tools:ignore="RtlHardcoded" />



</LinearLayout>