<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.result.ResultFragment"
    android:orientation="vertical">


    <ImageView
        android:src="@drawable/img"
        android:layout_width="match_parent"
        android:layout_height="400dp"/>

    <TextView
        android:id="@+id/tv_you"
        android:gravity="center"
        android:textSize="26sp"
        android:text="@string/you"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_gravity="center"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/img_1"/>
    <TextView
        android:id="@+id/tv_me"
        android:gravity="center"
        android:textSize="26sp"
        android:text="@string/me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textStyle="bold"
        android:textColor="#F8AEBB"
        android:id="@+id/tv_your_scope"
        android:gravity="center"
        android:textSize="26sp"
        android:text="@string/your_scope"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <TextView
        android:id="@+id/tv_percentage"
        android:layout_margin="16dp"
        android:textSize="40sp"
        android:text="@string/tv_0"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_try_again"
        android:text="@string/try_again"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>