<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/you_tv"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/img_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_you" />

    <TextView
        android:id="@+id/tv_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/me_tv"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_view" />

    <TextView
        android:id="@+id/tv_text_equally"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/res"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@id/img_view"
        app:layout_constraintTop_toBottomOf="@id/tv_you" />

    <ImageView
        android:id="@+id/img_heart_big"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/img_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.668"
        app:layout_constraintStart_toEndOf="@id/tv_text_equally"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/img_heart_big"
        app:layout_constraintEnd_toEndOf="@id/img_heart_big"
        app:layout_constraintStart_toStartOf="@id/img_heart_big"
        app:layout_constraintTop_toTopOf="@id/img_heart_big" />

</androidx.constraintlayout.widget.ConstraintLayout>